# LLMKBAugmentation

./: .gitignore  Appendix.gdoc  LICENSE  README.md  check_prompts.py  inference.py  llm_inference_transformers.py  llm_inference_vllm.py  llm_inference_vllm_conceptnet.py  llm_inference_vllm_interactive.ipynb  llm_inference_vllm_multialignet.py  llm_inference_vllm_semagram.py  one_shot_prompt_v1.json  optional-requirements.txt  prompt_converter.py  pyproject.toml  requirements.txt  zero_shot_prompt_v1.json  zero_shot_prompt_v2.json
conceptnet_extractor/: conceptnet_extractor.py  conceptnet_relatedto_extractor.py  conceptnet_relatedto_prompt_maker.py  usedfor_concepts.csv
evaluation/: __init__.py  compute_inter_annotator.py  eval_measures.py  evaluate_concepnet.py  generate_annotation_file.py  not_in_semagram.py  query_conceptnet.py  query_semagram.py  read_files.py  stats.py
evaluation/eval_plots/: graphs_matplotlib.ipynb
evaluation/eval_stats/: graphs_matplotlib.ipynb  prompt_gpt4_makeregex.txt  (+17 more)
manual_evaluation/: 13B_to_annotate.jsonl  7B-inter-annotation.txt  7B_to_annotate.jsonl  manual_evaluation_merge.jsonl
prompts/: zero_shot_prompt_v1.json  zero_shot_prompt_v2.json  zero_shot_prompt_v3.json  zero_shot_prompt_v4.json  zero_shot_prompt_v5.json
src/: __init__.py  conceptnet_extractor.py  conceptnet_prompt_maker.py  create_regression_graph.py  evaluate_concepnet.py  evaluate_framenet.py  inference.py  query_conceptnet.py  query_semagram.py  stats.py
visualizations/: aggregated_data.csv  create_graphs.py  model_clustering.py  model_performance_vs_size.py
(+1538 files in other folders)
