[project]
name = "llmkbaugmentation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "krippendorff>=0.8.2",
    "matplotlib>=3.10.9",
    "pandas",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "ujson>=5.12.1",
    "vllm>=0.21.0",
    "gensim>=4.4.0",
    "pykeen>=1.11.1",
    "sentence-transformers>=5.5.0",
    "nltk>=3.9.4",
    "datasets>=4.8.5",
]
